# game-of-life

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: FindCUnit.cmake
includes/: game.h  grid.h  renderer.h
src/: cell.rs  game.c  game_of_life.rs  grid.c  lib.rs  main.c  main.rs  renderer.c
tests/: game_of_life_tests.rs  test_game.c  test_grid.c  test_renderer.c
